--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "node-releases": "^2.0.19",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-refresh": "^0.14.2",
     "rollup": "^3.29.5",
     "semver": "^6.3.1",
@@ -39,6 +41,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "vite-plugin-deno": "^0.0.0-alpha.0"
   }
 }
