--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-refresh": "^0.14.2",
+    "react-router-dom": "^7.5.0",
     "rollup": "^3.29.5",
     "semver": "^6.3.1",
     "source-map-js": "^1.2.1",
